--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       href="https://twitter.com/notshoelaze"
       property="cc:attributionName"
       rel="cc:attributionURL"
-      >M Harsha Deepan</a
+      >ShOeLaZe</a
     >
     is licensed under a
     <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
